# mem2pix

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: msvc_winxp_support.cmake
scripts/: clean_build_directory.cmd
sources/: application.cpp  application.h  console.cpp  console.h  core.cpp  core.h  exception.cpp  exception.h  main.cpp  mem_reader_iface.h  params.h  params_manager.cpp  params_manager.h  pixel_format.h  project_info.h  renderer.cpp  renderer.h  utils.cpp  utils.h  utils_common.cpp
sources/linux/: mem_reader.cpp  mem_reader.h  utils.cpp  utils_linux.cpp
sources/windows/: mem_reader.cpp  mem_reader.h  utils.cpp  utils_windows.cpp
